--- a/Cineview/app/src/main/res/layout/fragment_favorite.xml
+++ b/Cineview/app/src/main/res/layout/fragment_favorite.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/rvFavFragRecycler"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".features.favorite.presentation.ui.FavoriteFragment"
-    android:background="@color/black"
-    tools:listitem="@layout/favorite_item"
-    />
+    android:background="@color/black">
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFavFragRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/favorite_item" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/favoriteEmptyAnim"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        app:lottie_colorFilter="@color/white"
+        app:lottie_rawRes="@raw/favorite_empty"
+        app:lottie_autoPlay="false"
+        app:lottie_loop="false" />
+
+</FrameLayout>
