Setup Login Layout

--- a/Cineview/app/src/main/res/layout/activity_login.xml
+++ b/Cineview/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.LoginActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".features.login.presentation.ui.LoginActivity"
+    android:background="@color/black">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/loginFragment"
-        android:name="com.github.grupo6cineview.cineview.features.login.LoginTelaFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:src="@drawable/logo_full"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.15" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Escolha uma forma para acessar o aplicativo:"
+        android:textSize="@dimen/subtitle_2_size"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.25"/>
+
+    <Button
+        android:id="@+id/buttonLoginAnonymous"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/red_dark"
+        android:text="Login Anônimo"
+        android:textAllCaps="false"
+        android:drawableLeft="@drawable/ic_anonymous"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintStart_toStartOf="@id/title"
+        app:layout_constraintEnd_toEndOf="@id/title" />
+
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:background="@color/grey_dark"
+        app:layout_constraintTop_toBottomOf="@id/buttonLoginAnonymous"
+        app:layout_constraintStart_toStartOf="@id/buttonLoginAnonymous"
+        app:layout_constraintEnd_toStartOf="@id/subtitle"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text="ou"
+        android:textColor="@color/grey_dark"
+        android:textSize="@dimen/subtitle_1_size"
+        app:layout_constraintTop_toBottomOf="@id/buttonLoginAnonymous"
+        app:layout_constraintBottom_toTopOf="@id/buttonLoginGoogle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
-</FrameLayout>
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
+        android:background="@color/grey_dark"
+        app:layout_constraintTop_toBottomOf="@id/buttonLoginAnonymous"
+        app:layout_constraintEnd_toEndOf="@+id/buttonLoginAnonymous"
+        app:layout_constraintStart_toEndOf="@id/subtitle" />
+
+    <Button
+        android:id="@+id/buttonLoginGoogle"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        android:text="Login com Google"
+        android:textColor="@color/black"
+        android:textAllCaps="false"
+        android:drawableLeft="@drawable/google_icon"
+        app:layout_constraintTop_toBottomOf="@id/divider1"
+        app:layout_constraintStart_toStartOf="@id/buttonLoginAnonymous"
+        app:layout_constraintEnd_toEndOf="@id/buttonLoginAnonymous" />
+
+    <Button
+        android:id="@+id/buttonLoginFacebook"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/blue_facebook"
+        android:text="Login com Google"
+        android:textAllCaps="false"
+        android:drawableLeft="@drawable/facebook_icon"
+        app:layout_constraintTop_toBottomOf="@id/buttonLoginGoogle"
+        app:layout_constraintStart_toStartOf="@id/buttonLoginGoogle"
+        app:layout_constraintEnd_toEndOf="@id/buttonLoginGoogle" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
