--- a/Cineview/app/src/main/res/layout/fragment_home.xml
+++ b/Cineview/app/src/main/res/layout/fragment_home.xml
@@ -89,7 +89,7 @@
                 android:id="@+id/tvHomeFragTopRated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_default"
+                android:layout_marginTop="@dimen/margin_medium"
                 app:layout_constraintTop_toBottomOf="@id/rvHomeFragNowPlaying"
                 app:layout_constraintStart_toStartOf="@id/tvHomeFragNowPlaying"
                 android:text="@string/home_frag_top_rated"
@@ -115,7 +115,7 @@
                 android:id="@+id/tvHomeFragPopular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_default"
+                android:layout_marginTop="@dimen/margin_medium"
                 app:layout_constraintTop_toBottomOf="@id/rvHomeFragTopRated"
                 app:layout_constraintStart_toStartOf="@id/tvHomeFragNowPlaying"
                 android:text="@string/home_frag_popular"
@@ -141,7 +141,7 @@
                 android:id="@+id/tvHomeFragTrending"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_default"
+                android:layout_marginTop="@dimen/margin_medium"
                 app:layout_constraintTop_toBottomOf="@id/rvHomeFragPopular"
                 app:layout_constraintStart_toStartOf="@id/tvHomeFragNowPlaying"
                 android:text="@string/home_frag_trending"
