--- a/Cineview/app/src/main/res/values/colors.xml
+++ b/Cineview/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="grey_dark">#FF808080</color>
     <color name="black_light">#FF332424</color>
     <color name="yellow">#FFFFFF00</color>
+    <color name="blue_facebook">#FF4267B2</color>
 
     <color name="background_1">@color/black</color>
     <color name="backdround_2">@color/black_light</color>
