--- a/Cineview/app/src/main/res/navigation/nav_graph_main.xml
+++ b/Cineview/app/src/main/res/navigation/nav_graph_main.xml
@@ -21,8 +21,8 @@
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
     <fragment
-        android:id="@+id/accountScreenFragment"
-        android:name="com.github.grupo6cineview.cineview.features.account.view.AccountScreenFragment"
-        android:label="fragment_account_screen"
-        tools:layout="@layout/fragment_account_screen" />
+        android:id="@+id/accountFragment"
+        android:name="com.github.grupo6cineview.cineview.features.account.presentation.ui.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account" />
 </navigation>
